--- a/Estimating.html
+++ b/Estimating.html
@@ -7,7 +7,10 @@
     <title>Estimating Detail</title>
     
     <link href="css/style.css" rel="stylesheet">
-</head>
+
+    <style type="text/css">
+        </style>
+        </head>
 <body>
     <h1><center>Construction Estimating In Detail</center></h1>
     <h3><center>Essential Skills</center></h3>
@@ -23,10 +26,9 @@
     <br>
     <br>
     <h3>Estimating From Start To Finish</h3>
-    <p id="details">Estimating is the process of taking a set of plans and reviewing them to generate a cost for the project. The first step in estimating commercial construction jobs is to take the invitation to bid (ITB) and upload the plan files into your takeoff software. In my instance I use Planswift. After you decide whether the project is in your typical scope of work and range of distance then you proceed with the takeoff. This consists of getting measurements of all applicable materiels i.e.; lumber, drywall, sod, plants, dirt, rocks etc. Once you have your quantities you will need to reach out to suppliers to get a quotation. Ensure that said quotation is valid for when the work will be done. Typically, there is at least 4 months after something goes out to bid before the project even starts. Once you have all potential material costs calculated always add at least 10%. This ensures that there is no loss due to potential unforseen circumstance. </p>
+    <p class="tab">Estimating is the process of taking a set of plans and reviewing them to generate a cost for the project. The first step in estimating commercial construction jobs is to take the invitation to bid (ITB) and upload the plan files into your takeoff software. In my instance I use Planswift. After you decide whether the project is in your typical scope of work and range of distance then you proceed with the takeoff. This consists of getting measurements of all applicable materiels i.e.; lumber, drywall, sod, plants, dirt, rocks etc. Once you have your quantities you will need to reach out to suppliers to get a quotation. Ensure that said quotation is valid for when the work will be done. Typically, there is at least 4 months after something goes out to bid before the project even starts. Once you have all potential material costs calculated always add at least 10%. This ensures that there is no loss due to potential unforseen circumstance. </p>
     <br>
-    <br>
-    <p id="details">Once you do this you need to use existing data to calculate time when it comes to the project. How long will it take? What potential roadblocks could cause the time to skyrocket? These are all things that you need to think about when calculating time. My methods of calculating time are for a company with a track record. You can look at past project and see how many man hours it took to complete similar scopes of work. AFter time is completed add 10% minimum just like you did with material costs. Take the new time number and the material number and add them. Generally speaking, a 30% profit is respectible but still competitive so that is my norm but this can vary. Add what profit you expect to make while still being competitive and then you have your porice to submit via proposal or all-in-one planroom</p> 
+    <p class="tab">Once you do this you need to use existing data to calculate time when it comes to the project. How long will it take? What potential roadblocks could cause the time to skyrocket? These are all things that you need to think about when calculating time. My methods of calculating time are for a company with a track record. You can look at past project and see how many man hours it took to complete similar scopes of work. AFter time is completed add 10% minimum just like you did with material costs. Take the new time number and the material number and add them. Generally speaking, a 30% profit is respectible but still competitive so that is my norm but this can vary. Add what profit you expect to make while still being competitive and then you have your porice to submit via proposal or all-in-one planroom</p> 
     <br>
     <h3><Center>Click Button Below to Return Home</Center></h3>
     <div class="button">
